# rps

./: .gitignore  sc.sh  tm_sc.sh
app/: Cargo.toml
app/src/: main.rs  windows.rs
app/src/windows/: acc_list.rs  home.rs
client/: Cargo.toml
client/src/: client.rs  main.rs  rps_client.rs  simulate.rs
client/src/rps_client/: client.rs  match.rs  play.rs  rps_match.rs  simulate.rs  util.rs
rps_lib/: Cargo.toml
rps_lib/src/: lib.rs  types.rs  util.rs
rps_lib/src/sql/: client.sql  util.rs
rps_lib/src/sql/bash/: setup.sh
rps_lib/src/sql/schema/: client.sql  db.sql  match_history.sql  user.sql
rps_lib/src/types/: torunament.rs
server/: Cargo.toml
server/src/: main.rs  rps_server.rs
server/src/rps_server/: rps_match.rs  server.rs  tournament.rs
server/src/rps_server/server/: manager.rs
server/src/rps_server/server/handler/: client.rs  match.rs
server/src/rps_server/server/manager/: client.rs  match.rs
sql/: Cargo.toml
sql/src/: main.rs
testcode/: Cargo.toml
testcode/src/: client.rs  main.rs  server.rs
