[package]
name = "rps_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
tokio = { version = "1.21", features = ["full"] }
systemstat = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres" ]}
